# claude-code-tools

./: .gitignore  CLAUDE.md  README.md  claude-remote-approve-spec.md  claude-tmux-ttyd.md  claude_code_ssh_access.md  claude_notify.sh  settings.json
.claude/: settings.json
.github/workflows/: test-permission-daemon.yml
claude_permission_daemon/: .gitignore  README.md  pyproject.toml
claude_permission_daemon/docs/: claude-permission-daemon-implementation-plan.md  claude-remote-approve-spec.md
claude_permission_daemon/docs/features/: README.md  initial-implementation.md  mac-windows.md  notifications.md  remote-updates.md  template.md  test-coverage-and-ci.md
claude_permission_daemon/docs/features/completed/: initial-implementation.md  mac-windows.md  notifications.md  remote-updates.md  test-coverage-and-ci.md
claude_permission_daemon/example/: config.toml
claude_permission_daemon/src/claude_permission_daemon/: __init__.py  base_idle_monitor.py  config.py  daemon.py  hook.py  idle_monitor.py  idle_monitor_factory.py  idle_monitor_mac.py  idle_monitor_windows.py  slack_handler.py  socket_server.py  state.py
claude_permission_daemon/systemd/: claude-permission-daemon.service
claude_permission_daemon/tests/: __init__.py  conftest.py  test_config.py  test_daemon.py  test_idle_monitor.py  test_idle_monitor_factory.py  test_idle_monitor_mac.py  test_idle_monitor_windows.py  test_integration.py  test_slack_handler.py  test_socket_server.py  test_state.py
commands/: goodcommit.md  independent.md
